--- a/剑指offer第2版/动态规划笔记.md
+++ b/剑指offer第2版/动态规划笔记.md
@@ -1,5 +1,10 @@
 # 动态规划
 
 
-如果面试题是求一个问题的最优解(通常是最大值或最小值),而且该问题能够分解成若干个子问题，并且子问题之间还有重叠的
-==3131241==斜体
+如果面试题是求一个问题的最优解(通常是最大值或最小值),而且该问题能够分解成若干个子问题，并且子问题之间还有重叠的更小的子问题，就可以考虑使用动态规划来解决这个问题
+
+## 动态规划问题的4个特点
+1. 求一个问题的最优解
+2. 整体问题的最优解依赖各个子问题的最优解
+3. 大问题分解成若干个子问题，这些小问题之间还有相互重叠的更小的子问题
+4. 为了避免重复求解子问题，我们可以用从下往上的顺序计算小问题的最优解并存储下来，再以此为基础求取大问题的最优解。**从上往下分析问题，从下往上解决**
