--- a/剑指offer第2版/动态规划笔记.md
+++ b/剑指offer第2版/动态规划笔记.md
@@ -7,4 +7,8 @@
 1. 求一个问题的最优解
 2. 整体问题的最优解依赖各个子问题的最优解
 3. 大问题分解成若干个子问题，这些小问题之间还有相互重叠的更小的子问题
-4. 为了避免重复求解子问题，我们可以用从下往上的顺序计算小问题的最优解并存储下来，再以此为基础求取大问题的最优解。**从上往下分析问题，从下往上解决**
+4. 为了避免重复求解子问题，我们可以用从下往上的顺序计算小问题的最优解并存储下来，再以此为基础求取大问题的最优解。**从上往下分析问题，从下往上求解问题**，我们总是从解决最小问题开始，把已经解决的子问题的最优解存储下来(大部分面试题是存储在一维或二维数组里)，并把子问题的最优解组合来逐步解决大问题
+
+贪婪算法合同太规划不一样，我们应用贪婪算法解决问题的时候，每一步都可以做出一个贪婪的选择，基于这个选择，我们可以得到最优解，我们需要用数学
+
+
