--- a/c++/一些问题.md
+++ b/c++/一些问题.md
@@ -13,4 +13,13 @@
 ## 第二个问题：
 ![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/F1B09FEB58AC43D83641F4AC937CC221-1582250680777.jpg)
 
-而+=好使是因为自定义这个操作符了
+![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/37DC19BC-0E11-45B6-9E66-3C8FB5E8627D-1582250814541.png)
+
+问什么这个![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/E7E215E2-BBD4-4D9C-8586-32D2C80B8AE5-1582250841607.png) 不报错
+
+而这个代码![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/D247604EC45897E2738C751D00C743D6-1582250860130.jpg)报错
+
+
+**而+=好使是因为自定义这个操作符了**
+**+ 居然跟 +=不一样**
+![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/F1B09FEB58AC43D83641F4AC937CC221-1582250891588.jpg)
