--- a/c++/一些问题.md
+++ b/c++/一些问题.md
@@ -20,6 +20,5 @@
 而这个代码![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/D247604EC45897E2738C751D00C743D6-1582250860130.jpg)报错
 
 
-**而+=好使是因为自定义这个操作符了**
-**+ 居然跟 +=不一样**
+**别人的回答：+ 居然跟 +=不一样，这是一个字符吧？字符串跟字符能相加吗？而+=好使是因为自定义这个操作符了**
 ![title](https://raw.githubusercontent.com/sivanWu0222/ImageHosting/master/gitnote/2020/02/21/F1B09FEB58AC43D83641F4AC937CC221-1582250891588.jpg)
