--- a/堆.md
+++ b/堆.md
@@ -3,3 +3,6 @@
 2. 各个子树也是具有1性质的完全二叉树
 
 
+二叉堆的两个应用场景：堆排序和优先级队列
+其实我们可以思考一下为什么优先级队列
+![一个介绍堆插入元素和删除元素的操作](https://blog.csdn.net/qq_30322803/article/details/78219638)
