--- a/堆.md
+++ b/堆.md
@@ -3,6 +3,7 @@
 2. 各个子树也是具有1性质的完全二叉树
 
 
-二叉堆的两个应用场景：堆排序和优先级队列
-其实我们可以思考一下为什么优先级队列
+二叉堆的两个应用场景：堆排序和优先级队列(应用在打印机的任务调度以及操作系统的进程管理上)
+其实我们可以思考一下为什么优先级队列会使用一个二叉堆：
+其实我们可以使用一个链表或数组，例如在进程管理中，我们其实不知道有多少进程，因此不建议使用数组，在使用链表实现二叉堆中，链表中的内容分成优先级排好序的以及优先级没有排序好，我们要找最大或最小优先级的任务时在排好序只需要o(1)但是在没排好序需要o(n)，但是排好序的时候插入一个任务，需要将任务重新按照优先级进行排序，时间复杂度o(n)，如果不需要有序
 ![一个介绍堆插入元素和删除元素的操作](https://blog.csdn.net/qq_30322803/article/details/78219638)
