--- a/堆.md
+++ b/堆.md
@@ -5,5 +5,5 @@
 
 二叉堆的两个应用场景：堆排序和优先级队列(应用在打印机的任务调度以及操作系统的进程管理上)
 其实我们可以思考一下为什么优先级队列会使用一个二叉堆：
-其实我们可以使用一个链表或数组，例如在进程管理中，我们其实不知道有多少进程，因此不建议使用数组，在使用链表实现二叉堆中，链表中的内容分成优先级排好序的以及优先级没有排序好，我们要找最大或最小优先级的任务时在排好序只需要o(1)但是在没排好序需要o(n)，但是排好序的时候插入一个任务，需要将任务重新按照优先级进行排序，时间复杂度o(n)，如果不需要有序
+**其实我们可以使用一个链表或数组，例如在进程管理中，我们其实不知道有多少进程，因此不建议使用数组，在使用链表实现二叉堆中，链表中的内容分成优先级排好序的以及优先级没有排序好，我们要找最大或最小优先级的任务时在排好序只需要o(1)但是在没排好序需要o(n)，但是排好序的时候插入一个任务，需要将任务重新按照优先级进行排序，时间复杂度o(n)，如果不需要有序，则最坏的就是查找最大和最小的优先级任务需要o(n)，因此使用链表的时间复杂度为o(n)，但是我们使用堆，如果插入和删除都仅需要o(logn)，尤其很适用于频繁进出的情况，而使用优先级排好序的链表，适用于进链表很少但是出很多的情况，而使用优先级没有排好序的链表，适用于出链表很多但是进很少的情况。**
 ![一个介绍堆插入元素和删除元素的操作](https://blog.csdn.net/qq_30322803/article/details/78219638)
